# TestCpp

./: .gitignore  AllFiles.h  README.md  TestArray.cpp  TestBasicNumber.cpp  TestCpp.vcproj  a.cpp  coordin.h  main.cpp  operOverloading.cpp  testClassTemplate.cpp  testFunTemplate.cpp  testFunction.cpp  testPoint.cpp  testScope.cpp  testScope2.cpp  test_multi_extend.cpp  test_new.cpp  testbit.cpp  testchar.cpp  testextend.cpp  testnamespace.cpp  testnamespace.h  teststring.cpp  teststruct.cpp
CBasic/: README.md  info.txt
CBasic/C99C11New/: CMakeLists.txt  README.md  main.c  test_alignof.c  test_init.c  test_thread.c  test_vla.c  test_wchar_t.c  threads.h参考手册.md
CBasic/IntegerPromotion/: CMakeLists.txt  main.c
CBasic/handle_strings/: CMakeLists.txt  README.md  cast_integer.c  cast_integer.cpp  main.c  main.cpp
CBasic/handle_time/: CMakeLists.txt  README.md  main.c
CBasic/printf_demos/: CMakeLists.txt  main.c
CBasic/write_file/: CMakeLists.txt  README.md  main.c  only_readfile.c  only_writefile.c  read_writefile.c  testread2.txt  testreadwrite1.txt  testreadwrite2.txt  testwrite1.txt  (+3 more)
Cpp03Basic/: .gitignore  CMakeLists.txt  README.md  TestArray.cpp  a.cpp  main.cpp  operOverloading.cpp  testClassBasic.cpp  testFunTemplate.cpp  testFunction.cpp  testScope.cpp  testbit.cpp  testchar.cpp  testextend2.cpp  testnamespace.h  teststring.cpp
Cpp11Basic/: CMakeLists.txt  README.md  f1_auto.cpp  f2_smart_pointer.cpp  f3_cast.cpp  f4_rtti.cpp  f5_move.cpp  f6_forward.cpp  f7_lambda.cpp  main.cpp
Cpp11Thread/ch0-hello/: CMakeLists.txt  main.cpp
CppBasic/: README.md
(+63 files in other folders)
